fully updated 3 pages of recipes.\

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <a href="recipes/fried-rice.html">Fried Rice</a>
         <br>    
         <a href="recipes/roasted-chicken.html">Roasted chicken</a>
+        <br>
+        <a href="recipes/lasagna.html">Lasagna </a>
       
 	</body>
 </html>
